# llm-epistemic-beliefs-79a0-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
datasets/mindgames/: test.jsonl
datasets/representational_stability/: fictional_statements.jsonl
datasets/trilemma_of_truth/: city_locations.jsonl  med_indications.jsonl  word_definitions.jsonl
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: LLM_belief_representation_theory_of_mind_20260211_165320.jsonl  epistemic_belief_language_models_cognition_20260211_164822.jsonl
papers/: arxiv_ids.json  download_list.json
papers/pages/: 2305.03353_mindgames_tom_llm_manifest.txt  2402.18496_lm_represent_beliefs_self_others_manifest.txt  2405.21030_standards_belief_representations_llms_manifest.txt  2410.21195_lm_cannot_distinguish_belief_knowledge_manifest.txt  2505.14685_lookbacks_track_beliefs_manifest.txt  2511.00617_belief_dynamics_icl_manifest.txt  (+2 more)
results/: config.json  exp2_differential_response.json  exp4_factive_verb.json
src/: analyze_results.py  run_experiments.py  stimuli.py
src/results/: summary_stats.json  (+2 more)
(+25 files in other folders)
