[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.20.0",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/research_workspace"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
